--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>Module 8</h3>
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Version Control with Git</td> </tr>
       <tr> <td>10:15</td>  <td>Morning break</td> </tr>
